made changes to the skills logo to fix issue with hover not working on safari. Changed bar graph to a radar graph. Adjusted CSS of Skills.js to fix sizing issues on page.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,9 +9,15 @@
   font-family: var(--font-main);
 }
 
-/* only section tags */
+/* only section tags and section id's */
 section {
-  padding-top: 3.5em;
+  padding: 3.5em 3.5em 0 3.5em;
+}
+
+@media (max-width: 600px) {
+  section {
+    padding: 3.5em .5em 0 .5em;
+  }
 }
 
 /* Socials.js */
@@ -24,6 +30,29 @@ li > a {
 li > a:hover {
   color: purple;
   opacity: 100%;
+}
+
+/* RadarChartSkills.js */
+#chart-data {
+  width: 50%;
+}
+
+@media (max-width: 850px) {
+  #chart-data {
+    width: 70%;
+  }
+}
+
+@media (max-width: 700px) {
+  #chart-data {
+    width: 90%;
+  }
+}
+
+@media (max-width: 400px) {
+  #chart-data {
+    width: 100%;
+  }
 }
 
 /* Projects.js */
@@ -41,17 +70,18 @@ min-height: 25vh;
 }
 
 /* Skills.js */
+
 .skills-div {
   height: 80px;
 }
 
 .skills-img {
-  height: 85%;
+  height: 70%;
   transition: height 0.5s;
 }
 
 .skills-img:hover {
-  height: 100%;
+  height: 80%;
 }
 
 /* LoadSpinner.js */
